--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             </div>
             <div class="col-4">
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-primary">Login</button>
+                    <a href="/pages/Login.html"><button class="btn btn-primary">Login</button></a>
+                    
                 </div>
             </div>
             <div class="col-8 d-xl-none d-block">
