design register page

--- a/pages/Login.html
+++ b/pages/Login.html
@@ -23,7 +23,7 @@
                             <div class="card shadow-lg p-xl-3 mb-xl-5 border-0">
 
                                 <div class="card-body">
-                                    <div class="row py-xl-4">
+                                    <div class="row pt-xl-4">
                                         <div class="col-xl-12">
                                             <h4 class="fw-bold text-custom">Welcome Back!</h4>
                                             <span class="text-muted mb-5">Login to your account to continue</span>
@@ -70,7 +70,7 @@
                                                     <a href="">Forgot password?</a>
                                                 </div>
                                                 <div class="text-center">
-                                                   <p><a href="/pages/signUp.html" class="singup-design">SIGN UP</a></p>
+                                                   <p><a href="/pages/signUp.html" class="singup-design" target="_blank">SIGN UP</a></p>
                                                 </div>
                                             </form>
                                         </div>
