--- a/about-us.html
+++ b/about-us.html
@@ -57,26 +57,65 @@
         </div>
 
 
+        <div class="row mt-5">
+            <div class="col-xl-6 col-lg-5 col-md-12 col-12">
+                <h1 class="fw-bold">About<br>
+                    Top Hit Records</h1>
+                <div class="text-color text-center custom-text-size">
+                    <p class=" justified-text">
+                        Top Hits Records is a forward-thinking music label created by artists for artists. We empower independent musicians who want to retain complete control over their creative work while enjoying professional support. Our services include global music distribution to 150+ platforms, royalty collection with direct payouts, comprehensive music protection, and artist verification on major streaming services like Spotify, YouTube, Apple Music, and more.
+                        Unlike traditional record labels that exert heavy-handed control over your career, Top Hits Records serves as a true partner. We believe your music belongs to you, and our role is to amplify your voice—not dictate its direction. From the moment you join, you gain access to:
+                        Worldwide Distribution: One upload sends your songs to every major DSP, from mainstream leaders to niche regional services.
+                        Transparent Royalties: We gather your earnings from all platforms and deposit them directly into your bank account—no hidden fees, no surprises.                        
+                        Content Protection: With YouTube Content ID and Rights Manager, we monitor unauthorized uses and ensure you receive every penny you've earned.
+                        Artist Verification: Secure verified artist profiles across Spotify, Apple Music, and other platforms to boost credibility and fan engagement.
+                        24/7 Personalized Support: Our dedicated team checks in 2-3 times per month and remains available around the clock to answer questions, troubleshoot issues, and offer strategic guidance.
+                        Whether you're a vocalist refining your debut single, a producer crafting your next big beat, or a multimedia creator exploring new frontiers, Top Hits Records is your ally. We champion freedom, fairness, and transparency because we know that when artists are empowered, creativity thrives. Let us handle the business so you can focus on what you do best: making music that moves the world..</p>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-7 col-md-12 col-12">
+                <div class="">
+                    <img src="/photos/about-us.jpg" class="img-fluid home-photo-size" alt="...">
+                </div>
+            </div>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="row mt-5">
+            <div class="col-xl-4 col-md-4 col-12">
+                <div class="d-flex justify-content-center custom-size">
+                    <img src="/photos/dwon.png"
+                        alt="">
+                </div>
+                <h4 class="text-center">Top Hit Records</h4>
+            </div>
+            <div class="col-xl-4 col-md-4 col-12 text-center">
+                <h4 class="">Address</h4>
+    
+                <p class="text-color">C/O Top Hit Records, Kaljani Bazar, Near Jyoti Dresses, Kaljani, Cooch Behar - 736133</p>
+            </div>
+            <div class="col-xl-4 col-md-4 col-12 text-center">
+                <div class="">
+                    <h4>Contact Us</h4>
+                </div>
+                <div class="mb-2">
+                    <i class="bi bi-telephone-fill fs-"><span class="ms-3">6297103889 /
+                        6297103889</span></i>
+                </div>
+                <div class="mb-2">
+                    <i class="bi bi-whatsapp fs-6"><span class="ms-3">6297103889</span></i>
+                </div>
+                <div class="mb-2">
+                    <i class="bi bi-envelope-at-fill fs-6 "><span class="ms-3">bvairubel@gmail.com</span></i>
+                </div>
+                <div class="mt-3">
+                    <a href="tel: +919800314116">
+                        <button class="btn btn-color mb-2"><i class="bi bi-telephone-fill"><span
+                                    class="ms-2 rounded-5">Call us</span></i></button>
+                    </a>
+                    <button onclick="whatsapp()" class="btn btn-color mb-2"><i class="bi bi-whatsapp"><span
+                                class="ms-2 rounded-5">Whatsapp</span></i></button>
+                </div>
+            </div>
 
 
         <div class="row footer-color mt-5">
