--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="text-center">
                     <h1 class="text-center">Unlimited Music Distribution. For Free. Forever.</h1>
                     <p>Get your music on Facebook, Instagram, Spotify, Apple Music, Wynk, Hungama, YouTube, JioSaavn,
-                        Instagram and more. We distribute independent artists and labels’ music all over the world
+                        Instagram and more. We distribute independent artists and labels' music all over the world
                         absolutely free.</p>
                 </div>
                 <!-- <img src="/photos/drum-set-photo.jpeg" class="background_photo_size" alt="" srcset=""> -->
@@ -295,10 +295,10 @@
                     At Top Hits Records, we truly care about our artists and their growth. That's why we offer exceptional customer support, available 24/7 to assist you anytime. In addition to this, we personally reach out to each artist 2-3 times every month to check in, offer guidance, solve problems, and ensure everything is on track. Whether you're just starting out or already established, we're always here to help you move forward with confidence and clarity.</p>
             </div>
             <div class="col-4">
-                <img src="/photos/Customer-Support.jpg" class="img-size" alt="" srcset="">
+                <img src="/photos/Customer-Support.jpg" class="img-size home-photo-size" alt="" srcset="">
             </div>
             <div class="col-4">
-                <img src="/photos/Customer-Support.jpg" class="img-size" alt="" srcset="">
+                <img src="/photos/Customer-Support.jpg" class="img-size home-photo-size" alt="" srcset="">
             </div>
             <div class="col-6">
                 <h1>Earn Money from Your Music (Royalties)</h1>
@@ -311,10 +311,10 @@
                 </p>
             </div>
             <div class="col-4">
-                <img src="/photos/Customer-Support.jpg" class="img-size" alt="" srcset="">
+                <img src="/photos/Customer-Support.jpg" class="img-size home-photo-size" alt="" srcset="">
             </div>
             <div class="col-4">
-                <img src="/photos/VerifiedArtistAccount.jpg" class="img-size" alt="" srcset="">
+                <img src="/photos/VerifiedArtistAccount.jpg" class="img-size home-photo-size" alt="" srcset="">
             </div>
             <div class="col-6">
                 <h1> Verified Artist Account
@@ -329,7 +329,7 @@
                 </p>
             </div>
             <div class="col-4">
-                <img src="/photos/smartLink.jpg" class="img-size" alt="" srcset="">
+                <img src="/photos/smartLink.jpg" class="img-size home-photo-size" alt="" srcset="">
             </div>
         </div>
 
@@ -342,6 +342,43 @@
         <div class="d-flex align-items-center justify-content-center pb-5">
             <button type="button" class="btn btn-primary">Apply Now For Free</button>
         </div>
+
+        <div class="row mt-5">
+            <div class="col-xl-4 col-md-4 col-12">
+                <div class="d-flex justify-content-center custom-size">
+                    <img src="/photos/dwon.png"
+                        alt="">
+                </div>
+                <h4 class="text-center">Top Hit Records</h4>
+            </div>
+            <div class="col-xl-4 col-md-4 col-12 text-center">
+                <h4 class="">Address</h4>
+    
+                <p class="text-color">C/O Top Hit Records, Kaljani Bazar, Near Jyoti Dresses, Kaljani, Cooch Behar - 736133</p>
+            </div>
+            <div class="col-xl-4 col-md-4 col-12 text-center">
+                <div class="">
+                    <h4>Contact Us</h4>
+                </div>
+                <div class="mb-2">
+                    <i class="bi bi-telephone-fill fs-"><span class="ms-3">6297103889 /
+                        6297103889</span></i>
+                </div>
+                <div class="mb-2">
+                    <i class="bi bi-whatsapp fs-6"><span class="ms-3">6297103889</span></i>
+                </div>
+                <div class="mb-2">
+                    <i class="bi bi-envelope-at-fill fs-6 "><span class="ms-3">bvairubel@gmail.com</span></i>
+                </div>
+                <div class="mt-3">
+                    <a href="tel: +919800314116">
+                        <button class="btn btn-color mb-2"><i class="bi bi-telephone-fill"><span
+                                    class="ms-2 rounded-5">Call us</span></i></button>
+                    </a>
+                    <button onclick="whatsapp()" class="btn btn-color mb-2"><i class="bi bi-whatsapp"><span
+                                class="ms-2 rounded-5">Whatsapp</span></i></button>
+                </div>
+            </div>
 
 
         <div class="row footer-color mt-5">
