--- a/services.html
+++ b/services.html
@@ -72,7 +72,42 @@
 
 
 
-
+        <div class="row mt-5">
+            <div class="col-xl-4 col-md-4 col-12">
+                <div class="d-flex justify-content-center custom-size">
+                    <img src="/photos/dwon.png"
+                        alt="">
+                </div>
+                <h4 class="text-center">Top Hit Records</h4>
+            </div>
+            <div class="col-xl-4 col-md-4 col-12 text-center">
+                <h4 class="">Address</h4>
+    
+                <p class="text-color">C/O Top Hit Records, Kaljani Bazar, Near Jyoti Dresses, Kaljani, Cooch Behar - 736133</p>
+            </div>
+            <div class="col-xl-4 col-md-4 col-12 text-center">
+                <div class="">
+                    <h4>Contact Us</h4>
+                </div>
+                <div class="mb-2">
+                    <i class="bi bi-telephone-fill fs-"><span class="ms-3">6297103889 /
+                        6297103889</span></i>
+                </div>
+                <div class="mb-2">
+                    <i class="bi bi-whatsapp fs-6"><span class="ms-3">6297103889</span></i>
+                </div>
+                <div class="mb-2">
+                    <i class="bi bi-envelope-at-fill fs-6 "><span class="ms-3">bvairubel@gmail.com</span></i>
+                </div>
+                <div class="mt-3">
+                    <a href="tel: +919800314116">
+                        <button class="btn btn-color mb-2"><i class="bi bi-telephone-fill"><span
+                                    class="ms-2 rounded-5">Call us</span></i></button>
+                    </a>
+                    <button onclick="whatsapp()" class="btn btn-color mb-2"><i class="bi bi-whatsapp"><span
+                                class="ms-2 rounded-5">Whatsapp</span></i></button>
+                </div>
+            </div>
 
 
 
