design service page

--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="p-2">
+<body class="p-2 service-background">
     <div class="container">
 
         <div class="row p-3 border-bottom d-flex align-items-center">
@@ -60,54 +60,165 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
         <div class="row mt-5">
-            <div class="col-xl-4 col-md-4 col-12">
-                <div class="d-flex justify-content-center custom-size">
-                    <img src="/photos/dwon.png"
-                        alt="">
-                </div>
-                <h4 class="text-center">Top Hit Records</h4>
+            <div class=" col-12 text-center mb-4">
+                <!-- <p class="text-uppercase text-muted">Features</p> -->
+                <h2 class="section-title">Our Features & Services.</h2>
             </div>
-            <div class="col-xl-4 col-md-4 col-12 text-center">
-                <h4 class="">Address</h4>
-    
-                <p class="text-color">C/O Top Hit Records, Kaljani Bazar, Near Jyoti Dresses, Kaljani, Cooch Behar - 736133</p>
-            </div>
-            <div class="col-xl-4 col-md-4 col-12 text-center">
-                <div class="">
-                    <h4>Contact Us</h4>
+        </div>
+
+
+        <div class="row justify-content-center">
+            <div class="col-md-4 mb-4">
+                <div class="card text-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/9068/9068707.png" class="card-img-top"
+                        alt="Communications">
+                    <div class="card-body">
+                        <h5 class="card-title">Global Music Distribution</h5>
+                        <p class="card-text">Distribute your music globally to 100+ platforms like Spotify, Apple Music, and more.</p>
+                        <a href="#" class="btn btn-custom">More</a>
+                    </div>
                 </div>
-                <div class="mb-2">
-                    <i class="bi bi-telephone-fill fs-"><span class="ms-3">6297103889 /
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card text-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/9212/9212819.png" class="card-img-top"
+                        alt="Inspired Design">
+                    <div class="card-body">
+                        <h5 class="card-title">Royalty Collection & Payouts</h5>
+                        <p class="card-text">We collect your music earnings from all platforms where it's played.</p>
+                        <a href="#" class="btn btn-custom">More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card text-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/7478/7478788.png" class="card-img-top"
+                        alt="Happy Customers">
+                    <div class="card-body">
+                        <h5 class="card-title"> YouTube Content ID</h5>
+                        <p class="card-text">We register your songs in YouTube Content ID to detect any unauthorized use.</p>
+                        <a href="#" class="btn btn-custom">More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card text-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/9068/9068707.png" class="card-img-top"
+                        alt="Communications">
+                    <div class="card-body">
+                        <h5 class="card-title">YouTube Official Artist Channel (OAC)</h5>
+                        <p class="card-text">Get a verified YouTube channel to showcase all your music content together.</p>
+                        <a href="#" class="btn btn-custom">More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card text-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/9212/9212819.png" class="card-img-top"
+                        alt="Inspired Design">
+                    <div class="card-body">
+                        <h5 class="card-title">Verified Artist Profiles</h5>
+                        <p class="card-text">Get verified on Spotify, Apple Music, JioSaavn, and other top platforms.</p>
+                        <a href="#" class="btn btn-custom">More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card text-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/7478/7478788.png" class="card-img-top"
+                        alt="Happy Customers">
+                    <div class="card-body">
+                        <h5 class="card-title"> SmartLink</h5>
+                        <p class="card-text">One smart link with all platforms where your song is available.</p>
+                        <a href="#" class="btn btn-custom">More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card text-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/9068/9068707.png" class="card-img-top"
+                        alt="Communications">
+                    <div class="card-body">
+                        <h5 class="card-title">Promotion & Marketing</h5>
+                        <p class="card-text">Custom music promotion via ads, social media, influencers, and press.</p>
+                        <a href="#" class="btn btn-custom">More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card text-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/9212/9212819.png" class="card-img-top"
+                        alt="Inspired Design">
+                    <div class="card-body">
+                        <h5 class="card-title">Artist Support</h5>
+                        <p class="card-text">Ongoing, personalized support for every artist we collaborate with.</p>
+                        <a href="#" class="btn btn-custom">More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card text-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/7478/7478788.png" class="card-img-top"
+                        alt="Happy Customers">
+                    <div class="card-body">
+                        <h5 class="card-title">Happy Customers</h5>
+                        <p class="card-text">Nisi purus in mollis nunc sed id semper. Rhoncus aenean vel elit
+                            scelerisque mauris.</p>
+                        <a href="#" class="btn btn-custom">More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <p class="text-center mt-4 text-muted" style="font-size: 14px;">Image from <a href="https://www.freepik.com"
+                target="_blank">Freepik</a></p>
+    </div>
+
+
+
+    <div class="row mt-5">
+        <div class="col-xl-4 col-md-4 col-12">
+            <div class="d-flex justify-content-center custom-size">
+                <img src="/photos/dwon.png" alt="">
+            </div>
+            <h4 class="text-center">Top Hit Records</h4>
+        </div>
+        <div class="col-xl-4 col-md-4 col-12 text-center">
+            <h4 class="">Address</h4>
+
+            <p class="text-color">C/O Top Hit Records, Kaljani Bazar, Near Jyoti Dresses, Kaljani, Cooch Behar - 736133
+            </p>
+        </div>
+        <div class="col-xl-4 col-md-4 col-12 text-center">
+            <div class="">
+                <h4>Contact Us</h4>
+            </div>
+            <div class="mb-2">
+                <i class="bi bi-telephone-fill fs-"><span class="ms-3">6297103889 /
                         6297103889</span></i>
-                </div>
-                <div class="mb-2">
-                    <i class="bi bi-whatsapp fs-6"><span class="ms-3">6297103889</span></i>
-                </div>
-                <div class="mb-2">
-                    <i class="bi bi-envelope-at-fill fs-6 "><span class="ms-3">bvairubel@gmail.com</span></i>
-                </div>
-                <div class="mt-3">
-                    <a href="tel: +919800314116">
-                        <button class="btn btn-color mb-2"><i class="bi bi-telephone-fill"><span
-                                    class="ms-2 rounded-5">Call us</span></i></button>
-                    </a>
-                    <button onclick="whatsapp()" class="btn btn-color mb-2"><i class="bi bi-whatsapp"><span
-                                class="ms-2 rounded-5">Whatsapp</span></i></button>
-                </div>
             </div>
+            <div class="mb-2">
+                <i class="bi bi-whatsapp fs-6"><span class="ms-3">6297103889</span></i>
+            </div>
+            <div class="mb-2">
+                <i class="bi bi-envelope-at-fill fs-6 "><span class="ms-3">bvairubel@gmail.com</span></i>
+            </div>
+            <div class="mt-3">
+                <a href="tel: +919800314116">
+                    <button class="btn btn-color mb-2"><i class="bi bi-telephone-fill"><span class="ms-2 rounded-5">Call
+                                us</span></i></button>
+                </a>
+                <button onclick="whatsapp()" class="btn btn-color mb-2"><i class="bi bi-whatsapp"><span
+                            class="ms-2 rounded-5">Whatsapp</span></i></button>
+            </div>
+        </div>
 
 
 
