--- a/contact-us.html
+++ b/contact-us.html
@@ -57,10 +57,36 @@
         </div>
 
 
+        
+        <div class="row mt-5 d-flex justify-content-center">
+            <div class="col-xxl-8 col-xl-8 col-md-10 col-12">
+                <h2 class="custom-color">Contact Us</h2>
+                <form action="">
+                    <div class="mt-3">
+                        <label for="name" class="mb-2">Name</label>
+                        <input type="text" id="name" class="form-control">
+                    </div>
+                    <div class="mt-3">
+                        <label for="email" class="mb-2">Email</label>
+                        <input type="email" id="email" class="form-control">
+                    </div>
+                    <div class="mt-3">
+                        <label for="contact-us" class="mb-2">Contact No</label>
+                        <input type="number" id="contact-us" class="form-control">
+                    </div>
+                    <div class="mt-3">
+                        <label for="message" class="mb-2">Message (optional)</label>
+                        <input type="text" id="message" class="form-control">
+                    </div>
+
+                    <button class="btn btn-color mt-3 px-4"> Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
 
-
-        <div class="row mt-5">
+    <!-- <div class="row mt-5">
             <div class="col-xl-4 col-md-4 col-12">
                 <div class="d-flex justify-content-center custom-size">
                     <img src="/photos/dwon.png"
@@ -107,7 +133,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/javascript/script.js"></script>
