--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                                     <div class="fs-2">Saavn</div>
                                 </div>
                             </div>
-                            <div class="carousel-item-custom p-2">
+                            <!-- <div class="carousel-item-custom p-2">
                                 <div class="text-center p-4">
                                     <div class="fs-2">
                                         ganna.com
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="carousel-item-custom p-2">
                                 <div class="text-center p-4">
                                     <div class="fs-2">
@@ -225,7 +225,7 @@
                         </div>
                         <div class="col">
                             <div class="text-center">
-                                <h3> Royalty Collection & Direct Payouts</h3>
+                                <h3> Royalty Collection</h3>
                                 <p>We track your music earnings from every platform and send the payments directly to
                                     your bank account. No delay, no confusion — just clear, direct payouts for your hard
                                     work.</p>
@@ -260,14 +260,14 @@
         <div class="row d-flex align-items-center justify-content-center my-5">
             <div class="col-5">
                 <h2>What You Get with Top Hits Records:</h2>
-                <p><i class="bi bi-check-lg"></i> Global Music Distribution <br>
-                    <i class="bi bi-check-lg"></i> 100% Ownership of Your Music<br>
-                    <i class="bi bi-check-lg"></i> Regular Royalty Payments<br>
-                    <i class="bi bi-check-lg"></i> Verified Artist Profiles<br>
-                    <i class="bi bi-check-lg"></i> YouTube Official Artist Channel<br>
-                    <i class="bi bi-check-lg"></i> SmartLinks for Easy Sharing<br>
-                    <i class="bi bi-check-lg"></i> 24/7 Artist Support<br>
-                    <i class="bi bi-check-lg"></i> Monthly Personal Check-ins<br>
+                <p><i class="bi bi-check-lg text-success"></i> Global Music Distribution <br>
+                    <i class="bi bi-check-lg text-success"></i> 100% Ownership of Your Music<br>
+                    <i class="bi bi-check-lg text-success"></i> Regular Royalty Payments<br>
+                    <i class="bi bi-check-lg text-success"></i> Verified Artist Profiles<br>
+                    <i class="bi bi-check-lg text-success"></i> YouTube Official Artist Channel<br>
+                    <i class="bi bi-check-lg text-success"></i> SmartLinks for Easy Sharing<br>
+                    <i class="bi bi-check-lg text-success"></i> 24/7 Artist Support<br>
+                    <i class="bi bi-check-lg text-success"></i> Monthly Personal Check-ins<br>
                 </p>
             </div>
             <div class="col-5">
@@ -343,6 +343,58 @@
             <button type="button" class="btn btn-primary">Apply Now For Free</button>
         </div>
 
+        <div class="row mt-5 d-flex justify-content-center">
+            <div class="col-xl-6 col-lg-6 col-md-8 col-12 mt-3">
+                <div class="mapouter">
+                    <div class="gmap_canvas"><iframe width="545" height="300" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=koko%20mhendo%20homestay%20Bara%20Mangwa,%20near%20Gram%20Panchayat%20Office,%20Bara%20Mungwa,%20West%20Bengal%20734312&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        <style>
+                            .mapouter {
+                                position: relative;
+                                text-align: right;
+                                height: 300px;
+                                width: 100%;
+                            }
+                        </style>
+                        <style>
+                            .gmap_canvas {
+                                overflow: hidden;
+                                background: none !important;
+                                height: 300px;
+                                width: 100%;
+                            }
+                        </style>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-xl-6 col-12 mt-3">
+                <h2 class="custom-color">Reach us</h2>
+                <form action="">
+                    <div class="mt-3">
+                        <label for="name" class="mb-2">Name</label>
+                        <input type="text" id="name" class="form-control">
+                    </div>
+                    <div class="mt-3">
+                        <label for="email" class="mb-2">Email</label>
+                        <input type="email" id="email" class="form-control">
+                    </div>
+                    <div class="mt-3">
+                        <label for="contact-us" class="mb-2">Contact No</label>
+                        <input type="number" id="contact-us" class="form-control">
+                    </div>
+                    <div class="mt-3">
+                        <label for="message" class="mb-2">Message (optional)</label>
+                        <input type="text" id="message" class="form-control">
+                    </div>
+
+                    <button class="btn btn-color mt-3 px-4"> Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
         <div class="row mt-5">
             <div class="col-xl-4 col-md-4 col-12">
                 <div class="d-flex justify-content-center custom-size">
@@ -371,7 +423,7 @@
                     <i class="bi bi-envelope-at-fill fs-6 "><span class="ms-3">bvairubel@gmail.com</span></i>
                 </div>
                 <div class="mt-3">
-                    <a href="tel: +919800314116">
+                    <a href="tel: +916297103889">
                         <button class="btn btn-color mb-2"><i class="bi bi-telephone-fill"><span
                                     class="ms-2 rounded-5">Call us</span></i></button>
                     </a>
