add  about us photo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="p-2">
+<body class="p-2 service-background">
     <div class="container">
 
         <div class="row p-3 border-bottom d-flex align-items-center">
