--- a/services.html
+++ b/services.html
@@ -168,17 +168,13 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/7478/7478788.png" class="card-img-top"
                         alt="Happy Customers">
                     <div class="card-body">
-                        <h5 class="card-title">Happy Customers</h5>
-                        <p class="card-text">Nisi purus in mollis nunc sed id semper. Rhoncus aenean vel elit
-                            scelerisque mauris.</p>
+                        <h5 class="card-title">Copyright Protection</h5>
+                        <p class="card-text">We assist in registering music copyrights under government to secure your legal rights.</p>
                         <a href="#" class="btn btn-custom">More</a>
                     </div>
                 </div>
             </div>
         </div>
-
-        <p class="text-center mt-4 text-muted" style="font-size: 14px;">Image from <a href="https://www.freepik.com"
-                target="_blank">Freepik</a></p>
     </div>
 
 
